--- a/.gitlab-ci-files/job-macosx.yml
+++ b/.gitlab-ci-files/job-macosx.yml
@@ -88,4 +88,4 @@ job-macosx-deploy:
 
   script:
     - scp WORK/desktop/Build/linphone_package/$PACKAGE_NAME-*-mac.dmg $DEPLOY_SERVER:$MACOSX_UPLOAD_DIRECTORY/
-    - ssh -l $DEPLOY_SERVER jenkins_link_latest $MACOSX_UPLOAD_DIRECTORY '$PACKAGE_NAME-*-mac.dmg'
+    - ssh $DEPLOY_SERVER jenkins_link_latest $MACOSX_UPLOAD_DIRECTORY '$PACKAGE_NAME-*-mac.dmg'
