--- a/.gitlab-ci-files/job-macosx.yml
+++ b/.gitlab-ci-files/job-macosx.yml
@@ -83,6 +83,9 @@ job-macosx-deploy:
   stage: deploy
   tags: [ "deploy" ]
 
+  variables:
+    CI_DEBUG_TRACE: "true"
+
   dependencies:
     - job-macosx-ninja
 
