--- a/.gitlab-ci-files/job-windows.yml
+++ b/.gitlab-ci-files/job-windows.yml
@@ -6,6 +6,9 @@ job-windows-vs2015:
 
   stage: build
 
+  variables:
+    CI_DEBUG_TRACE: "true"
+
   tags: [ "windows" ]
 
   script:
@@ -25,6 +28,9 @@ job-windows-vs2015:
 #################################################
 
 job-windows-deploy:
+
+  variables:
+    CI_DEBUG_TRACE: "true"
 
   stage: deploy
   tags: [ "deploy" ]
