--- a/.gitlab-ci-files/job-macosx.yml
+++ b/.gitlab-ci-files/job-macosx.yml
@@ -9,8 +9,9 @@
     - ccache -s
     - export Qt5_DIR=/usr/local/opt/qt/lib/cmake
     - export PATH=$PATH:/usr/local/opt/qt/bin
-    - python prepare.py -G "$CMAKE_GENERATOR" -cc --package $DEFAULT_MACOS_CMAKE_OPTIONS $CMAKE_OPTIONS
+    - python prepare.py -G "$CMAKE_GENERATOR" -cc --package -DLINPHONE_BUILDER_SIGNING_IDENTITY="$MACOS_SIGNING_IDENTITY" $DEFAULT_MACOS_CMAKE_OPTIONS $CMAKE_OPTIONS
     - cmake --build WORK/desktop/cmake -- $ADDITIONAL_BUILD_OPTIONS
+    - codesign --verbose -s "$MACOS_SIGNING_IDENTITY" WORK/desktop/Build/linphone_package/Linphone-*.dmg
     - ccache -s
 
   artifacts:
