Fix deploy jobs

--- a/.gitlab-ci-files/job-linux-centos7.yml
+++ b/.gitlab-ci-files/job-linux-centos7.yml
@@ -67,7 +67,7 @@ job-centos7-rpm:
 job-centos7-rpm-deploy:
 
   stage: deploy
-  tags: [ "deploy" ]
+  tags: [ "deploy-linux" ]
 
   only:
     - schedules
