--- a/.gitlab-ci-files/job-macosx.yml
+++ b/.gitlab-ci-files/job-macosx.yml
@@ -81,11 +81,10 @@ job-macosx-xcode:
 job-macosx-deploy:
 
   stage: deploy
-  tags: [ "deploy-linux" ]
+  tags: [ "deploy" ]
 
   dependencies:
     - job-macosx-ninja
 
   script:
     - scp WORK/desktop/Build/linphone_package/$PACKAGE_NAME-*-mac.dmg $DEPLOY_SERVER:$MACOSX_UPLOAD_DIRECTORY/
-    - ssh $DEPLOY_SERVER jenkins_link_latest $MACOSX_UPLOAD_DIRECTORY '$PACKAGE_NAME-*-mac.dmg'
