--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -333,8 +333,8 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.cmake" "${CMAKE_CURRENT
 
 include_directories(src/)
 
-find_package(Qt5 COMPONENTS ${QT5_PACKAGES} REQUIRED)
-find_package(Qt5 COMPONENTS ${QT5_PACKAGES_OPTIONAL} QUIET)
+find_package(Qt5 5.9 COMPONENTS ${QT5_PACKAGES} REQUIRED)
+find_package(Qt5 5.9 COMPONENTS ${QT5_PACKAGES_OPTIONAL} QUIET)
 
 if (CMAKE_INSTALL_RPATH)
   get_target_property(LUPDATE_PATH Qt5::lupdate LOCATION)
