--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -23,6 +23,6 @@
 lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
 
-if (NOT WIN32 AND NOT APPLE)
-  lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it.
-endif ()
+#if (NOT WIN32 AND NOT APPLE)
+#  lcb_blacklist_dependencies("turbojpeg") # turbo-jpeg is already provided by Qt5 so do not build it.
+#endif ()
