--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -18,10 +18,18 @@
     - echo $DEFAULT_LINUX_CMAKE_OPTIONS
     - echo $CMAKE_OPTIONS
     - echo $CMAKE_SANITIZER_OPTIONS
-    - mkdir linphone-sdk/build-sdkdesktop
+    - mkdir -p linphone-sdk/build-sdkdesktop
     - cd linphone-sdk/build-sdkdesktop
     - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
     - cmake --build . --target sdk -- $ADDITIONAL_BUILD_OPTIONS
+    - mkdir -p ../build-desktop/OUTPUT
+    - mv -R linphone-sdk/desktop/* ../../build-desktop/OUTPUT 
+    - cd ../../submodules/externals/minizip
+    - mkdir -p build-minizipdesktop
+    - cd build-minizipdesktop
+    - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS
+    - cmake --build . --target all -- $ADDITIONAL_BUILD_OPTIONS
+    - cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
 #-DCMAKE_INSTALL_PREFIX=../build-desktop/OUTPUT -DCMAKE_PREFIX_PATH=../build-desktop/OUTPUT
 #    - cmake --build . --target sdk -- $ADDITIONAL_BUILD_OPTIONS
 #    - echo $ADDITIONAL_BUILD_OPTIONS
