--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -2,16 +2,16 @@
 # Ninja
 #################################################
 
-#job-debian9-ninja-gcc:
+job-debian9-ninja-gcc:
 
-#  tags: [ "docker-debian9" ]
-#  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
-#  variables:
-#    CMAKE_OPTIONS: -DENABLE_DOC=ON
-#    CMAKE_GENERATOR: Ninja
-#    CC: gcc
-#    CXX: g++
-#  extends: .job-linux-desktop
+  tags: [ "docker-debian9" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  variables:
+    CMAKE_OPTIONS: -DENABLE_DOC=ON
+    CMAKE_GENERATOR: Ninja
+    CC: gcc
+    CXX: g++
+  extends: .job-linux-desktop
 
 
 job-debian9-ninja-gcc-smallsdk:
