Test All project for Archlinux

--- a/.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml
+++ b/.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml
@@ -18,6 +18,48 @@ job-ubuntu-rolling-makefile-gcc:
   extends: .job-linux-desktop
 
 
+job-ubuntu-rolling-makefile-clang:
+
+  tags: [ "docker-ubuntu-rolling" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-ubuntu:rolling
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+  variables:
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: clang
+    CXX: clang++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+  extends: .job-linux-desktop
+
+
+#################################################
+# Ninja
+#################################################
+
+
+job-ubuntu-rolling-ninja-gcc:
+
+  tags: [ "docker-ubuntu-rolling" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-ubuntu:rolling
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+  variables:
+    CMAKE_GENERATOR: Ninja
+    CC: gcc
+    CXX: g++
+  extends: .job-linux-desktop
+
+
+job-ubuntu-rolling-ninja-gcc-novideo:
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+  variables:
+    CMAKE_OPTIONS: -DENABLE_VIDEO=NO
+  extends: job-ubuntu-rolling-ninja-gcc
+
 
 job-ubuntu-rolling-ninja-clang:
   tags: [ "docker-ubuntu-rolling" ]
@@ -27,4 +69,14 @@ job-ubuntu-rolling-ninja-clang:
     CC: clang
     CXX: clang++
   extends: .job-linux-desktop
+
+
+job-ubuntu-rolling-ninja-clang-novideo:
+
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+  variables:
+    CMAKE_OPTIONS: -DENABLE_VIDEO=NO
+  extends: job-ubuntu-rolling-ninja-clang
 
