--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,8 @@ include:
   - '.gitlab-ci-files/job-linux-desktop.yml'
 #  - '.gitlab-ci-files/job-linux-desktop-debian9.yml'
 #  - '.gitlab-ci-files/job-linux-desktop-ubuntu-rolling.yml'
-  - '.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml'
+#  - '.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml'
+  - '.gitlab-ci-files/job-linux-desktop-centos7.yml'
 
 #  - '.gitlab-ci-files/job-linux.yml'
 #  - '.gitlab-ci-files/job-linux-archlinux.yml'
