Add library folder to rpath

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -346,7 +346,8 @@ if (CMAKE_INSTALL_RPATH)
   get_filename_component(QT_PATH "${LUPDATE_PATH}/../lib" ABSOLUTE)
   list(APPEND CMAKE_INSTALL_RPATH "${QT_PATH}")
 endif ()
-list(APPEND CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_LIBDIR}")
+list(APPEND CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+list(APPEND CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib64")
 # Add languages support.
 add_subdirectory(${LANGUAGES_DIRECTORY})
 
